--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -126,6 +126,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Register</button>
                     </form>
+                    <img *ngIf="qrCodeUrl" [src]="qrCodeUrl" alt="Your QR Code">
                     
                 </div>
             </div>
