--- a/src/app/entreprise/entreprise.component.html
+++ b/src/app/entreprise/entreprise.component.html
@@ -285,7 +285,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form (submit)="onlogin()">
+                <form >
                     <div class="mb-3 input-group">
                         <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                         <input type="email"[(ngModel)]="email"  class="form-control" id="loginEmail" placeholder="Entrez votre email"required>
