--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -116,7 +116,7 @@
                             
                         </div>
                        <!-- Modifiez le lien Contact pour utiliser routerLink -->
-                           <a  class="nav-item nav-link" [routerLink]="['/contact']">Contact</a>
+                          <!-- <a  class="nav-item nav-link" [routerLink]="['/contact']">Contact</a>-->
 
                     </div>
                     <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
