--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
-<app-entreprise></app-entreprise>
+
 <!-- app.component.html -->
-<router-outlet></router-outlet> <!-- Le contenu des composants de route sera chargé ici -->
+ <!-- Le contenu des composants de route sera chargé ici -->
+<router-outlet></router-outlet>
