--- a/src/app/inspecteur/inspecteur.component.html
+++ b/src/app/inspecteur/inspecteur.component.html
@@ -102,18 +102,18 @@
       <div class="carousel-item active">
         <div class="profile-desk">
           
-            <h1>Profil de l'Utilisateur</h1>
-            <p><strong>Prénom:</strong> {{ user.firstname }}</p>
-            <p><strong>Nom:</strong> {{ user.lastname }}</p>
-           
-            <p><strong>email:</strong> {{user.email }}</p>
-          
-      </div>
+          <h1>Profil :</h1>
+          <p><strong>Prénom:</strong> {{ user.firstname }}</p>
+          <p><strong>Nom:</strong> {{ user.lastname }}</p>
+         
+          <p><strong>email:</strong> {{user.email }}</p>
+        
+    </div>
       
       <div class="carousel-item">
         <div class="profile-desk">
           
-            <h1>Profil de l'Utilisateur</h1>
+            <h1>Profil:</h1>
             <p><strong>Prénom:</strong> {{ user.firstname }}</p>
             <p><strong>Nom:</strong> {{ user.lastname }}</p>
            
@@ -144,7 +144,7 @@
       <table class="table manage-candidates-top mb-0">
         <thead>
           <tr>
-            <th>Nom de client </th>
+            <th>Nom du demandeur </th>
             <th class="text-center">Status</th>
             <th class="action text-right">Action</th>
           </tr>
