--- a/src/app/particulier/particulier.component.html
+++ b/src/app/particulier/particulier.component.html
@@ -90,7 +90,8 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img src="assets/img/image.png" class="img-fluid" alt="Image">
+            <img src="assets/img/ser.jpg" class="img-fluid w-100" alt="Image">
+
             <div class="carousel-caption">
                 <div class="p-3" style="max-width: 900px;">
                    
@@ -103,7 +104,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="assets/img/image.png" class="img-fluid" alt="Image">
+            <img src="assets/img/ser2.jpg" class="img-fluid" alt="Image">
             <div class="carousel-caption">
                 <div class="p-3" style="max-width: 900px;">
                    
@@ -146,8 +147,8 @@
     <div class="container text-center py-5" style="max-width: 900px;">
         <h3 class="text-white display-3 mb-4">Our Services</h3>
         <ol class="breadcrumb justify-content-center mb-0">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+           
+           
             <li class="breadcrumb-item active text-white">Services</li>
         </ol>    
     </div>
@@ -258,4 +259,4 @@
         </div>
         
                
-                
+       
