--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <header>
 
 	<div class="logosec">
-		<div class="logo">Douane tunisien </div>
+		<div class="logo">Auto-Service </div>
 		<img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210182541/Untitled-design-(30).png"
 			class="icn menuicn" id="menuicn" alt="menu-icon">
 	</div>
@@ -69,7 +69,7 @@
 			</div>
 		</nav>
 	</div>
-	<div class="main">
+	<!-- <div class="main">
 
 
 
@@ -115,7 +115,14 @@
 		</div>
 
 
-	</div>
+	</div> -->
 
-
+	<div class="admin-dashboard">
+		<h1>Tableau de Bord Administrateur</h1>
+		<div class="dashboard-container">
+		  <app-dashboard></app-dashboard>
+		</div>
+	  </div>
+	  
+	
 	<script src="./index.js"></script>
