--- a/src/app/ajoutbureau/ajoutbureau.component.html
+++ b/src/app/ajoutbureau/ajoutbureau.component.html
@@ -12,9 +12,9 @@
       <div class="col-lg-4 text-center text-lg-end">
           <div class="d-inline-flex align-items-center" style="height: 45px;">
              <!-- Lien de déconnexion -->
-             <a href="#" class="text-light me-3"><i class="fas fa-sign-out-alt me-1"></i> Log Out</a>
+             <a href="#" class="text-light me-3"><i class="fas fa-sign-out-alt me-1"></i> Déconnexion</a>
              <!-- Lien de retour -->
-             <a class="text-light" routerLink="/admin"><i class="fas fa-arrow-left me-1"></i> Back</a>
+             <a class="text-light" routerLink="/admin"><i class="fas fa-arrow-left me-1"></i>retour</a>
 
           </div>
         </div>
@@ -69,91 +69,104 @@
   
 
 
-<div class="container-xl px-4 mt-4">
-  <!-- Account page navigation-->
- 
-  <hr class="mt-0 mb-4">
-  <div class="row">
-      <div class="col-xl-4">
-          <!-- Profile picture card-->
-          <div class="card mb-4 mb-xl-0">
-              <div class="card-header">Profile Picture</div>
-              <div class="card-body text-center">
-                  <!-- Profile picture image-->
-                  <img class="img-account-profile rounded-circle mb-2" src="http://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-                  <!-- Profile picture help block-->
-                  <div class="small font-italic text-muted mb-4">image par defaut</div>
-                  <!-- Profile picture upload button-->
-                  <button class="btn btn-primary" type="button">ajouter l'image</button>
-              </div>
-          </div>
+
+
+  <div class="container-xl px-4 mt-4">
+    <!-- Account page navigation-->
+   
+    <hr class="mt-0 mb-4">
+    <div class="row">
+        <div class="col-xl-4">
+            <!-- Profile picture card-->
+         
+<!-- <div>
+    <h2>Create Bureau</h2>
+    <form (ngSubmit)="createBureau()">
+      <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" [(ngModel)]="bureauDto.name" name="name" required>
       </div>
-      <div class="col-xl-8">
-          <!-- Account details card-->
-          <div class="card mb-4">
-              <div class="card-header">Ajouter un Bureau</div>
-              <div class="card-body">
-                  <form [formGroup]="ajoutbureau">
-                    
-                     
-                      <!-- Form Row-->
-                      <div class="row gx-3 mb-3">
-                          <!-- Form Group (first name)-->
-                          <div class="col-md-6">
-                              <label class="small mb-1" for="inputFirstName">Nom</label>
-                              <input class="form-control" id="inputFirstName" type="text" placeholder="Taper le nom de bureau " formControlName="firstname">
+  
+      <div>
+        <label for="taches">Taches:</label>
+        <div *ngFor="let tache of tachesList">
+          <input type="checkbox" [value]="tache" (change)="toggleTache($event)">
+          {{ tache }}
+        </div>
+      </div>
+  
+      <button type="submit">Create Bureau</button>
+    </form>
+  </div> -->
+  
+        </div>
+        <div class="col-xl-8">
+            <!-- Account details card-->
+            <div class="card mb-4">
+                <div class="card-header">Ajouter employé</div>
+                <div class="card-body">
+                    <form [formGroup]="ajoutbureau">
+                      
+                       
+                        <!-- Form Row-->
+                        <div class="row gx-3 mb-3">
+                            <!-- Form Group (first name)-->
+                            <div class="col-md-6">
+                                <label class="small mb-1" for="inputFirstName">Nom</label>
+                                <input class="form-control" id="inputFirstName" type="text" placeholder="Taper le nom de bureau " formControlName="firstname">
+                            </div>
+                            <!-- Form Group (last name)-->
+                            <div class="col-md-6">
+                              <label class="small mb-1" for="inputLastName">Prénom</label>
+                              <input class="form-control" id="inputLastName" type="text" placeholder="Taper le prénom de bureau" formControlName="lastname">
                           </div>
-                          <!-- Form Group (last name)-->
-                          <div class="col-md-6">
-                            <label class="small mb-1" for="inputLastName">Prénom</label>
-                            <input class="form-control" id="inputLastName" type="text" placeholder="Taper le prénom de bureau" formControlName="lastname">
                         </div>
-                      </div>
-                      <!-- Form Row        -->
-                      
-                       
-                       
-                        
-                      <!-- Form Group (email address)-->
-                      <div class="col-md-6">
-                        <label class="small mb-1" for="inputEmail">Email</label>
-                        <input class="form-control" id="inputEmail" type="email" placeholder="Taper l'email" formControlName="email">
-                    </div>
-                      <!-- Form Row-->
-                     
+                        <!-- Form Row        -->
                         
                          
-                          <!-- Form Group (birthday)-->
-                          <div class="col-md-6">
-                            <label class="small mb-1" for="inputPassword">Mot de passe</label>
-                            <input class="form-control" id="inputPassword" type="password" placeholder="Taper le mot de passe" formControlName="password">
-                        </div>
-                      
-                      <div class="col-md-6">
-                        <label class="small mb-1" for="selectRole">Role</label>
-                        <select class="form-control" id="selectRole" formControlName="roles" >
-                          <option *ngFor="let p of rolle" [value]="p.id">{{ p.name }}</option>
-                        </select>
-                      </div>
-                      
+                         
+                          
+                        <!-- Form Group (email address)-->
                         <div class="col-md-6">
-                            <label class="small mb-1" for="selectBureau">Nom de bureau</label>
-                            <select class="form-control" id="selectBureau" formControlName="idBureau"> 
-                                <option  *ngFor="let bureau of bureaux " [value]="bureau.id">{{bureau.name}}</option>
-                               
-                            </select>
+                          <label class="small mb-1" for="inputEmail">Email</label>
+                          <input class="form-control" id="inputEmail" type="email" placeholder="Taper l'email" formControlName="email">
+                      </div>
+                        <!-- Form Row-->
+                       
+                          
+                           
+                            <!-- Form Group (birthday)-->
+                            <div class="col-md-6">
+                              <label class="small mb-1" for="inputPassword">Mot de passe</label>
+                              <input class="form-control" id="inputPassword" type="password" placeholder="Taper le mot de passe" formControlName="password">
+                          </div>
+                        
+                        <div class="col-md-6">
+                          <label class="small mb-1" for="selectRole">Role</label>
+                          <select class="form-control" id="selectRole" formControlName="roles" >
+                            <option *ngFor="let p of rolle" [value]="p.id">{{ p.name }}</option>
+                          </select>
                         </div>
-                         
-                      
-                      <!-- Save changes button-->
-                      <button class="btn btn-primary" type="button" (click)="onSubmit()">Ajouter</button>
-
-                     
-            </form>
-          </div>
-              </div>
-  </div>
-          
-      
- 
-
+                        
+                          <div class="col-md-6">
+                              <label class="small mb-1" for="selectBureau">Nom de bureau</label>
+                              <select class="form-control" id="selectBureau" formControlName="idBureau"> 
+                                  <option  *ngFor="let bureau of bureaux " [value]="bureau.id">{{bureau.name}}</option>
+                                 
+                              </select>
+                          </div>
+                           
+                        
+                        <!-- Save changes button-->
+                        <button class="btn btn-primary" type="button" (click)="onSubmit()">Ajouter</button>
+  
+                       
+              </form>
+            </div>
+           </div>
+    </div>
+            
+        
+   
+  
+  
