Commit complet du projet

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -15,8 +15,9 @@
 			<img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210180014/profile-removebg-preview.png"
 				class="dpicn" alt="dp">
 		</div>
-	</div>
 
+	</div>
+               <a href="#" class="me-3 text-light" (click)="logout()"><small><i class="fa fa-user me-2"></i>Deconnexion </small></a>
 </header>
 
 <div class="main-container">
