--- a/src/app/ajoutbureau/ajoutbureau.component.html
+++ b/src/app/ajoutbureau/ajoutbureau.component.html
@@ -144,7 +144,8 @@
                         <div class="col-md-6">
                           <label class="small mb-1" for="selectRole">Role</label>
                           <select class="form-control" id="selectRole" formControlName="roles" >
-                            <option *ngFor="let p of rolle" [value]="p.id">{{ p.name }}</option>
+                            <!-- <option *ngFor="let p of rolle" [value]="p.id">{{ p.name }}</option> -->
+                            <option>ROLE_ADMIN</option>
                           </select>
                         </div>
                         
