--- a/src/app/chef/chef.component.html
+++ b/src/app/chef/chef.component.html
@@ -20,9 +20,9 @@
            
             <div class="d-inline-flex align-items-center" style="height: 45px;">
               
-               <a href="#" class="me-3 text-light"><small><i class="far fa-bell me-2"></i>Notification</small></a>
+
              
-               <a href="#" class="me-3 text-light" (click)="logout()"><small><i class="fa fa-user me-2"></i>log out </small></a>
+               <a href="#" class="me-3 text-light" (click)="logout()"><small><i class="fa fa-user me-2"></i>Deconnexion </small></a>
                
                <a href="#" class="me-3 text-light" data-toggle="modal" data-target="#myModal" >
                 <small>
